--- a/src/header/header.css
+++ b/src/header/header.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   border: 1px solid lightgrey;
-  grid-template-columns: 60px 600px 400px 200px;
+  grid-template-columns: 60px 400px 600px 400px 200px;
   grid-template-rows: 100%;
 }
 .header-container {
@@ -13,7 +13,7 @@
   grid-column-end: 4;
 }
 
-button {
+.button-container button {
   height: 50px;
   width: 80px;
   margin-top: 20px;
@@ -21,4 +21,14 @@ button {
   border-radius: 5px;
   background-color: lightblue;
   color: white;
+}
+
+.button-container button:hover,
+button:focus {
+  border-style: solid;
+  background-color: rgba(211, 211, 211, 0.281);
+  border-color: lightcoral;
+  border-image: initial;
+  transition: color 0.5s ease 0s, fill 0.5s ease 0s, box-shadow 0.5s ease 0s;
+  color: lightcoral;
 }
