--- a/src/popularpage/post/post.css
+++ b/src/popularpage/post/post.css
@@ -1,12 +1,47 @@
 .post-container {
   display: grid;
-  grid-template-columns: 80px 800px 20px 400px 200px;
+  /* grid-template-columns: 100px 80px 700px 20px 400px; */
+  grid-column-start: 3;
 }
 .post {
   border: 1px solid lightgrey;
   border-radius: 5px;
   min-height: 100px;
-  min-width: 600px;
-  grid-column-start: 2;
+  min-width: 700px;
+  grid-column-start: 3;
   margin-top: 20px;
+  margin-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: grid;
+  grid-template-columns: 60px 10px 700px;
+  grid-template-rows: 1;
+}
+.upvote-post {
+  grid-column-start: 1;
+}
+
+.post-content {
+  grid-column-start: 3;
+}
+.post-title {
+  margin-bottom: 0;
+}
+
+.post-date {
+  color: gray;
+  font-size: 0.7rem;
+  margin-top: 0;
+}
+
+.post-author {
+  color: gray;
+  font-weight: 450;
+  font-size: 1rem;
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+.post img {
+  max-width: 600px;
 }
