--- a/src/createPostForm/createPostForm.css
+++ b/src/createPostForm/createPostForm.css
@@ -1,20 +1,29 @@
 .create-form {
   display: block;
   width: 50%;
+  margin: 0 auto;
+  margin-top: 20px;
 }
 .create-form label {
   display: block;
   padding: 2%;
+  height: 30%;
 }
 .create-form input {
   width: 100%;
+  height: 30px;
+  margin-top: 10px;
+  padding: 0;
+  margin-bottom: 5%;
 }
 .create-form textarea {
   width: 100%;
   height: 40%;
+  border-radius: 5px;
 }
 .create-form button {
   width: 98%;
+  height: 3rem;
   margin: 2%;
   font-size: 1rem;
   margin-bottom: 10px;
@@ -26,7 +35,7 @@
 }
 
 .create-form button:hover {
-  border-style: solid;
+  border: 2px solid lightcoral;
   background-color: rgba(211, 211, 211, 0.281);
   border-color: lightcoral;
   border-image: initial;
